# Baymax

./: .gitignore  Pipfile  README.md  akane.pm2config.json  baymax.pm2config.json  blacklist.json  bot.py  config-template.py  config.py  config.py.template  data_migrators.py  dunston_b.json  launcher.py  main.py  okayu.pm2config.json  penumbra.pm2config.json  prefixes.json  pyproject.toml  requirements.txt  robohz.pm2config.json
.github/workflows/: analyze.yml
.github/workflows/.disabled/: analyze.yml
Bot/: main.py
Bot/Cogs/: setup.py
cogs/: __init__.py  admin.py  akane.py  api.py  audio.py  automod.py  autoroles.py  baymax.py  botspw.py  buttons.py  campfire.py  cleanup.py  config.py  core.py  dicks.py  dnd.py  dunston.py  emoji.py  eval.py  external.py  fun.py  funhouse.py  google.py  help.py  image.py  lewd.py  manga.py  memes.py  meta.py  mod.py  modtools.py  nihongo.py  okayu.py  private.py  profile.py  reactionroles.py  reddit.py  reminders.py  rng.py  rtfm.py  (+19 more)
cogs/__dnk__/: memes.py  stars.py
cogs/private/: campfire.py  dunston.py  private.py
config/: bot.json  muted.json  rust-updates.json  settings.json  tags.json
migrations/: autoroles.json  autoroles_config.json  command_config.json  commands.json  current-autoroles.json  current-autoroles_config.json  current-autorolesconfigtable.json  current-autorolestable.json  current-command_config.json  current-commands.json  current-emoji_stats.json  current-feeds.json  current-guild_mod_config.json  current-plonks.json  current-profiles.json  current-reminders.json  current-rtfm.json  current-specialistevents.json  current-starboard.json  current-starboard_entries.json  current-starrers.json  current-tag_lookup.json  current-tags.json  current-twitchtable.json  emoji_stats.json  feeds.json  guild_mod_config.json  plonks.json  profiles.json  reminders.json  rtfm.json  specialistevents.json  starboard.json  starboard_entries.json  starrers.json  tag_lookup.json  tags.json  twitchtable.json
sysd/: RoboHz.service  install_sysd.sh
utils/: automod_checks.py  cache.py  checks.py  config.py  context.py  converters.py  core.py  currency_codes.json  db.py  decorators.py  errors.py  exceptions.py  formats.py  friendly_date.py  fuzzy.py  lang.py  logging_mixin.py  members.py  mystbin.py  nu_settings.py  paginator.py  rust_checks.py  settings.py  specialist.py  sql.py  time.py  version.py
