[tool.poetry]
name = "Okayu"
version = "0.1.1"
description = "A general purpose and fun Discord bot."
authors = ["AbstractUmbra <Umbra@AbstractUmbra.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
jishaku = "^1.19.0"
asyncpg = "^0.20.1"
googletrans = "^3.0.0"
psutil = "^5.7.2"
click = "^7.1.2"
parsedatetime = "^2.6"
lru_dict = "^1.1.6"
lxml = "^4.5.2"
pytz = "^2020.1"
python-dateutil = "^2.8.1"
fuzzywuzzy = "^0.18.0"
pygit2 = "^1.3.0"
"mystbin.py" = "^0.2.2"
feedparser = "^6.0.1"
CurrencyConverter = "^0.14.3"
attrdict = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "*"
autopep8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
